# dogiradiant

./: CMakeLists.txt  README.md  config.py
contrib/bkgrnd2d/: bkgrnd2d.cpp  bkgrnd2d.h  dialog.cpp  plugin.cpp
contrib/bobtoolz/: CPortals.h  DBobView.cpp  DBrush.cpp  DBrush.h  DEntity.cpp  DEntity.h  DMap.cpp  DMap.h  DPlane.cpp  DPlane.h  DTrainDrawer.cpp  DTreePlanter.cpp  StdAfx.h  bobToolz-GTK.cpp  cportals.cpp  funchandlers-GTK.cpp  misc.cpp  misc.h
contrib/bobtoolz/dialogs/: dialogs-gtk.cpp  dialogs-gtk.h
contrib/camera/: camera.cpp  dialogs.cpp  misc.h  renderer.cpp
contrib/gtkgensurf/: dec.cpp  face.cpp  gendlgs.cpp  genmap.cpp  gensurf.h  plugin.cpp
contrib/hydratoolz/: plugin.cpp
contrib/prtview/: AboutDialog.cpp  ConfigDialog.cpp  LoadPortalFileDialog.cpp  prtview.cpp  stdafx.h
include/: globalDefines.h  gridDataType.h  igl.h  iglInterpolate.h  iglInterpolatePlugin.h  isurfaceplugin.h  qerplugin.h  qertypes.h  version.h
install/: update_game_pack.sh
install/installs/JAPack/.svn/: wc.db
install/installs/JAPack/install/base/models/map_objects/desert/: Copy of t_cave.ASE  t_cave3_new.ASE  t_pilar2_new.ASE  t_plat.ASE  t_rock.ASE  t_rockwall_clip.ASE  t_rockwall_new.ASE  t_swall.ASE  t_swall_new.ASE  t_wall.ASE  t_wall_new.ASE
install/installs/JAPack/install/base/models/map_objects/factory/: ceiling_light_old.ASE  f_door_old.ASE  fatal_out2.ASE  fatal_out3.ASE  fatal_out4.ASE  fatal_out_LESSOLD.ASE  fatal_out_OLD.ASE  pilar.ASE
install/installs/JAPack/install/base/models/map_objects/hoth/: blastdoor.ASE  cave2_new2.ASE  cave2_new3.ASE  generator.ASE  h_cliff.ASE  hall_old.ASE  icearch2.ASE  mountain_1.ASE  mountain_2.ASE  rock.ASE  rock_spike.ASE
install/installs/JAPack/install/base/models/map_objects/korriban/: kportal.ASE  statue_ragnos3.ASE  statue_ragnos_new.ASE
install/installs/JAPack/install/base/models/map_objects/rocky_ruins/: metal_wall_plate_old.ASE
install/installs/JAPack/install/base/models/map_objects/ships/: academy.ASE  academy_withdoor.ASE
install/installs/JAPack/install/base/models/map_objects/test/: link.ASE  testcliphull.ASE
install/installs/JAPack/install/base/models/map_objects/vjun/: vcurve_big.ASE  vhub_big.ASE  vrock_big.ASE
install/installs/JAPack/install/base/models/players/gonk/: gonk.ASE
install/installs/JAPack/install/base/models/weapons2/blaster_pistol/: blaster_pistol_w_1.ASE
install/installs/JAPack/install/base/models/weapons2/concussion/: c_rifle_w.ASE
install/installs/JAPack/install/base/models/weapons2/jawa/: jawa_gun_w.ASE
install/installs/JAPack/install/base/models/weapons2/noghri_stick/: noghri_stick_w.ASE
install/installs/JAPack/install/base/models/weapons2/saber_1/: saber_1_old.ASE
install/installs/JAPack/install/base/models/weapons2/saber_2/: saber_2_old.ASE
install/installs/JAPack/install/base/models/weapons2/saber_3/: saber_3_old.ASE
install/installs/JAPack/install/base/models/weapons2/saber_5/: saber_5_old.ASE
install/installs/JAPack/install/base/models/weapons2/saber_8/: saber_8_old.ASE
install/installs/JAPack/install/base/models/weapons2/saber_desann/: saber_w.ASE  saber_w_1.ASE
install/installs/JAPack/install/base/models/weapons2/saber_dual_1/: saber_dual_1_old.ASE
install/installs/JAPack/install/base/models/weapons2/saber_dual_2/: saber_dual_2_old.ASE
install/installs/JAPack/install/base/models/weapons2/saber_dual_3/: Copy of saber_dual_3.ASE
install/installs/JAPack/install/base/models/weapons2/saber_dual_4/: Copy of saber_dual_4.ASE
install/installs/JAPack/install/base/models/weapons2/tusken_rifle/: tusken_rifle_w.ASE
install/installs/JAPack/install/base/models/weapons2/tusken_staff/: tusken_staff_w.ASE
install/installs/JAPack/install/base/scripts/: mp_entities.def
libs/: bytebool.h  mathlib.h  picomodel.h
libs/cmdlib/: cmdlib.cpp
libs/l_net/: l_net.h
libs/mathlib/: bbox.c  m4x4.c  mathlib.c
libs/picomodel/: picointernal.c  picointernal.h  picomodel.c  pm_3ds.c  pm_ase.c  pm_ms3d.c  pm_obj.c
libs/picomodel/lwo/: vmap.c
libs/splines/: math_angles.cpp  math_vector.cpp  math_vector.h  q_parse.cpp  q_shared.h  splines.cpp  splines.h
libs/synapse/: synapse.cpp
plugins/entity/: eclassmodel.cpp  entity.cpp  entity_entitymodel.cpp  light.cpp  miscmodel.cpp  plugin.cpp  plugin.h
plugins/image/: image.cpp
plugins/imagepng/: plugin.cpp
plugins/map/: plugin.cpp
plugins/mapxml/: plugin.cpp
plugins/model/: cpicosurface.cpp  model.cpp  plugin.cpp  plugin.h  remap.cpp
plugins/shaders/: plugin.cpp  shaders.cpp
plugins/spritemodel/: plugin.cpp
plugins/surface/: surfacedialog.cpp  surfdlg_plugin.cpp  surfdlg_plugin.h
plugins/textool/: 2DView.cpp  2DView.h  ControlPointsManager.cpp  ControlPointsManager.h  StdAfx.h  TexTool.cpp
plugins/vfspk3/: vfs.cpp  vfspk3.cpp
radiant/: bp_dlg.cpp  brush.cpp  brush.h  brush_primit.cpp  camera.h  camwindow.cpp  camwindow.h  csg.cpp  drag.cpp  eclass_def.cpp  feedback.cpp  findtexturedialog.cpp  glwindow.cpp  gtkdlgs.cpp  gtkmisc.cpp  gtkmisc.h  main.cpp  mainframe.cpp  mainframe.h  map.cpp  patchdialog.cpp  patchdialog.h  pluginmanager.cpp  pmesh.cpp  points.cpp  preferences.cpp  preferences.h  qe3.cpp  qe3.h  qfiles.h  select.cpp  select.h  stdafx.h  surfacedialog.cpp  surfacedialog.h  surfaceplugin.cpp  surfaceplugin.h  texwindow.cpp  undo.cpp  vertsel.cpp  (+6 more)
tools/quake3/common/: inout.c  polylib.c  qfiles.h  threads.c  trilib.c  vfs.c
tools/quake3/q3data/: models.c  q3data.c  video.c
tools/quake3/q3map2/: bsp.c  image.c  light.c  light_bounce.c  light_trace.c  model.c  portals.c  q3map2.h  surface_meta.c  tjunction.c
